changed github to git

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>Hello, I'm Prabal Yadav</h1>
   <p>Data Scientist | ML | Vlogs</p>
-  <a href="https://github.com/prblydv">GitHubb</a>
+  <a href="https://github.com/prblydv">Git</a>
 </body>
 </html>
